# socket.io-client-cpp

./: CMakeLists.txt  socketio.pc.cmakein
examples/Console/: main.cpp
